internal/generate/testdata/errors/InvalidScalar.go
package errors

const _ = `# @octoqlgen
	query InvalidScalar { f }
`
